# avito_parser

./: .gitignore  .pre-commit-config.yaml  avito_cookies.pkl  avito_items.xlsx  database.py  docker-compose.yml  dockerfile  main.py  p.titan-corp.conf  pyproject.toml  settings.py
.github/workflows/: deploy.yml
app_settings/: admin.py  init_settings.py  models.py
eshmakar_connector/: admin.py  connector.py  models.py  tasks.py
google_sheet/: admin.py  models.py  routers.py  service.py
parsers/: parser_request.py  parser_selenium.py
schedule/: admin.py  initial_data.py  models.py  routers.py  service.py
